lib/src/compiler/tests/testdata/errors/37.out
error[E014]: invalid regular expression
 --> line:3:14
  |
3 |     $a = /abc[xyz/
  |              ^ unclosed character class
  |